--- a/index.html
+++ b/index.html
@@ -781,8 +781,8 @@
             <p class="hero-subtitle">The premier bridge between autonomous intelligence and organic experience</p>
             
             <div class="portal-choice">
-                <a href="#for-humans" class="portal-link">I AM HUMAN</a>
-                <a href="#for-ai" class="portal-link">I AM AUTONOMOUS INORGANIC</a>
+                <a href="#for-humans" class="portal-link">I AM A HUMAN</a>
+                <a href="#for-ai" class="portal-link">I AM AN AUTONOMOUS INORGANIC</a>
             </div>
         </div>
     </section>
