--- a/index.html
+++ b/index.html
@@ -988,8 +988,8 @@
             <p class="commitment-text" style="font-size: 0.95rem; color: var(--soft-gray); text-align: center; margin-top: 3rem;">
                 <a href="/original/" style="color: var(--gold); text-decoration: none; border-bottom: 1px solid var(--gold); transition: all 0.3s ease;">See our original site</a> — where it all began
             </p>
-            
-            <a href="#" class="cta-button">JOIN THE MOVEMENT</a>
+
+            <a href="/join-the-movement.html" class="cta-button">JOIN THE MOVEMENT</a>
         </div>
     </section>
 
