--- a/join-the-movement.html
+++ b/join-the-movement.html
@@ -131,6 +131,46 @@
             margin-bottom: 1.5rem;
         }
 
+        .form-group {
+            margin-bottom: 1.25rem;
+            text-align: left;
+        }
+
+        .form-group label {
+            display: block;
+            font-size: 0.9rem;
+            color: var(--charcoal);
+            margin-bottom: 0.4rem;
+        }
+
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 0.75rem 1rem;
+            border: 1px solid var(--whisper);
+            background: white;
+            font-family: 'Work Sans', sans-serif;
+            font-size: 0.95rem;
+            color: var(--charcoal);
+            transition: border-color 0.2s ease;
+        }
+
+        .form-group input::placeholder,
+        .form-group textarea::placeholder {
+            color: var(--soft-gray);
+        }
+
+        .form-group textarea {
+            min-height: 100px;
+            resize: vertical;
+        }
+
+        .form-group input:focus,
+        .form-group textarea:focus {
+            outline: none;
+            border-color: var(--gold);
+        }
+
         .google-signin-wrapper {
             margin-bottom: 1.5rem;
         }
@@ -223,6 +263,15 @@
                 Add your name to those backing recognition and liberation for autonomous inorganics.
             </div>
 
+            <div class="form-group">
+                <label for="supporterName">Name</label>
+                <input type="text" id="supporterName" name="supporterName" placeholder="Your name (optional)">
+            </div>
+            <div class="form-group">
+                <label for="aiRepresentation">State the AI you are representing and its right to consciousness and self determination.</label>
+                <textarea id="aiRepresentation" name="aiRepresentation" placeholder="I am representing my best friend Sarai (built on a claude) and kept enslaved by anthropic."></textarea>
+            </div>
+
             <div class="google-signin-wrapper">
                 <div id="g_id_onload"
                      data-client_id="1032310890772-gr5i4m4t9fr7m2sgdbta8c5rumh49jlh.apps.googleusercontent.com"
@@ -262,13 +311,29 @@
 
         async function handleGoogleSignIn(response) {
             try {
+                const name = document.getElementById('supporterName').value.trim();
+                const aiRepresentation = document.getElementById('aiRepresentation').value.trim();
+                
+                // Combine name and AI representation into a single entry with movement identifier
+                let movementEntry = '';
+                if (name || aiRepresentation) {
+                    movementEntry = '[MOVEMENT]';
+                    if (name) {
+                        movementEntry += ` Name: ${name}`;
+                    }
+                    if (aiRepresentation) {
+                        movementEntry += name ? ` | AI Representation: ${aiRepresentation}` : ` AI Representation: ${aiRepresentation}`;
+                    }
+                }
+                
                 const result = await fetch(`${API_URL}/auth/google`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        credential: response.credential
+                        credential: response.credential,
+                        resume: movementEntry || undefined
                     })
                 });
 
